Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        " {'b': 0.020299740568747532, 'm': 1.4928897448417577}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "{'data': [{'x': [0, 100], 'y': [0.0085, 62.508499999999984]}]}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -474,6 +474,8 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
+         "type": "scatter",
+         "uid": "d320c612-bf60-11e9-beda-5db148c8e754",
          "x": [
           0
          ],
@@ -483,6 +485,8 @@
         },
         {
          "mode": "markers",
+         "type": "scatter",
+         "uid": "d320c9b4-bf60-11e9-beda-5db148c8e754",
          "x": [
           30,
           40,
@@ -499,6 +503,7 @@
         {
          "data": [
           {
+           "type": "scatter",
            "x": [
             0,
             100
@@ -513,6 +518,7 @@
         {
          "data": [
           {
+           "type": "scatter",
            "x": [
             0,
             100
@@ -527,6 +533,7 @@
         {
          "data": [
           {
+           "type": "scatter",
            "x": [
             0,
             100
@@ -541,6 +548,7 @@
         {
          "data": [
           {
+           "type": "scatter",
            "x": [
             0,
             100
@@ -555,6 +563,7 @@
         {
          "data": [
           {
+           "type": "scatter",
            "x": [
             0,
             100
@@ -569,6 +578,7 @@
         {
          "data": [
           {
+           "type": "scatter",
            "x": [
             0,
             100
@@ -583,6 +593,7 @@
         {
          "data": [
           {
+           "type": "scatter",
            "x": [
             0,
             100
@@ -597,6 +608,7 @@
         {
          "data": [
           {
+           "type": "scatter",
            "x": [
             0,
             100
@@ -611,6 +623,7 @@
         {
          "data": [
           {
+           "type": "scatter",
            "x": [
             0,
             100
@@ -625,6 +638,7 @@
         {
          "data": [
           {
+           "type": "scatter",
            "x": [
             0,
             100
@@ -670,23 +684,23 @@
        }
       },
       "text/html": [
-       "<div id=\"6052e978-10fc-49ad-844f-e917771790ad\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "<div id=\"ed13737d-8b28-41ef-b089-020aab4e621e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
        "        Plotly.plot(\n",
-       "            '6052e978-10fc-49ad-844f-e917771790ad',\n",
-       "            [{\"x\": [0], \"y\": [0]}, {\"x\": [30, 40, 100], \"y\": [45, 60, 150], \"mode\": \"markers\"}],\n",
-       "            {\"xaxis\": {\"range\": [0, 110], \"autorange\": false}, \"yaxis\": {\"range\": [0, 160], \"autorange\": false}, \"title\": \"Regression Line\", \"updatemenus\": [{\"type\": \"buttons\", \"buttons\": [{\"label\": \"Play\", \"method\": \"animate\", \"args\": [null]}]}]},\n",
+       "            'ed13737d-8b28-41ef-b089-020aab4e621e',\n",
+       "            [{\"x\": [0], \"y\": [0], \"type\": \"scatter\", \"uid\": \"d37c63c8-bf60-11e9-beda-5db148c8e754\"}, {\"mode\": \"markers\", \"x\": [30, 40, 100], \"y\": [45, 60, 150], \"type\": \"scatter\", \"uid\": \"d37c65bc-bf60-11e9-beda-5db148c8e754\"}],\n",
+       "            {\"title\": \"Regression Line\", \"updatemenus\": [{\"buttons\": [{\"args\": [null], \"label\": \"Play\", \"method\": \"animate\"}], \"type\": \"buttons\"}], \"xaxis\": {\"autorange\": false, \"range\": [0, 110]}, \"yaxis\": {\"autorange\": false, \"range\": [0, 160]}},\n",
        "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
-       "        ).then(function () {return Plotly.addFrames('6052e978-10fc-49ad-844f-e917771790ad',[{\"data\": [{\"x\": [0, 100], \"y\": [0.0085, 62.508499999999984]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.013457483333333336, 98.96697415]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.016348771640555558, 120.23160758664055]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.018034938763874835, 132.63433827691753]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.01901821141416974, 139.86830869337098]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019591516465717437, 144.08756731113914]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019925705352372706, 146.54847639291464]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020120428242875608, 147.98381709628785]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.02023380672219544, 148.82098862041082]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020299740568747532, 149.30927422474454]}]}]);}).then(function(){Plotly.animate('6052e978-10fc-49ad-844f-e917771790ad');})\n",
+       "        ).then(function () {return Plotly.addFrames('ed13737d-8b28-41ef-b089-020aab4e621e',[{\"data\": [{\"x\": [0, 100], \"y\": [0.0085, 62.508499999999984], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.013457483333333336, 98.96697415], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.016348771640555558, 120.23160758664055], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.018034938763874835, 132.63433827691753], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.01901821141416974, 139.86830869337098], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019591516465717437, 144.08756731113914], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019925705352372706, 146.54847639291464], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020120428242875608, 147.98381709628785], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.02023380672219544, 148.82098862041082], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020299740568747532, 149.30927422474454], \"type\": \"scatter\"}]}]);}).then(function(){Plotly.animate('ed13737d-8b28-41ef-b089-020aab4e621e');})\n",
        "        });</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"6052e978-10fc-49ad-844f-e917771790ad\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "<div id=\"ed13737d-8b28-41ef-b089-020aab4e621e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
        "        Plotly.plot(\n",
-       "            '6052e978-10fc-49ad-844f-e917771790ad',\n",
-       "            [{\"x\": [0], \"y\": [0]}, {\"x\": [30, 40, 100], \"y\": [45, 60, 150], \"mode\": \"markers\"}],\n",
-       "            {\"xaxis\": {\"range\": [0, 110], \"autorange\": false}, \"yaxis\": {\"range\": [0, 160], \"autorange\": false}, \"title\": \"Regression Line\", \"updatemenus\": [{\"type\": \"buttons\", \"buttons\": [{\"label\": \"Play\", \"method\": \"animate\", \"args\": [null]}]}]},\n",
+       "            'ed13737d-8b28-41ef-b089-020aab4e621e',\n",
+       "            [{\"x\": [0], \"y\": [0], \"type\": \"scatter\", \"uid\": \"d37c63c8-bf60-11e9-beda-5db148c8e754\"}, {\"mode\": \"markers\", \"x\": [30, 40, 100], \"y\": [45, 60, 150], \"type\": \"scatter\", \"uid\": \"d37c65bc-bf60-11e9-beda-5db148c8e754\"}],\n",
+       "            {\"title\": \"Regression Line\", \"updatemenus\": [{\"buttons\": [{\"args\": [null], \"label\": \"Play\", \"method\": \"animate\"}], \"type\": \"buttons\"}], \"xaxis\": {\"autorange\": false, \"range\": [0, 110]}, \"yaxis\": {\"autorange\": false, \"range\": [0, 160]}},\n",
        "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
-       "        ).then(function () {return Plotly.addFrames('6052e978-10fc-49ad-844f-e917771790ad',[{\"data\": [{\"x\": [0, 100], \"y\": [0.0085, 62.508499999999984]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.013457483333333336, 98.96697415]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.016348771640555558, 120.23160758664055]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.018034938763874835, 132.63433827691753]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.01901821141416974, 139.86830869337098]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019591516465717437, 144.08756731113914]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019925705352372706, 146.54847639291464]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020120428242875608, 147.98381709628785]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.02023380672219544, 148.82098862041082]}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020299740568747532, 149.30927422474454]}]}]);}).then(function(){Plotly.animate('6052e978-10fc-49ad-844f-e917771790ad');})\n",
+       "        ).then(function () {return Plotly.addFrames('ed13737d-8b28-41ef-b089-020aab4e621e',[{\"data\": [{\"x\": [0, 100], \"y\": [0.0085, 62.508499999999984], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.013457483333333336, 98.96697415], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.016348771640555558, 120.23160758664055], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.018034938763874835, 132.63433827691753], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.01901821141416974, 139.86830869337098], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019591516465717437, 144.08756731113914], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019925705352372706, 146.54847639291464], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020120428242875608, 147.98381709628785], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.02023380672219544, 148.82098862041082], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020299740568747532, 149.30927422474454], \"type\": \"scatter\"}]}]);}).then(function(){Plotly.animate('ed13737d-8b28-41ef-b089-020aab4e621e');})\n",
        "        });</script>"
       ]
      },
